--- a/app/views/template.scala.html
+++ b/app/views/template.scala.html
@@ -9,11 +9,8 @@
     <meta name="keywords" content=@keywords>
     <meta name="description" content=@description>
     <link rel="shortcut icon" type="image/png" href="/favicon.ico">
-    <link rel="stylesheet" href="/assets/css/base.css">
-    <link rel="stylesheet" href="/assets/css/global/global.css">
-    <link rel="stylesheet" href="@css">
-
-
+    <link rel="stylesheet" href="/assets/css/global/global.css?v=2013040401">
+    <link rel="stylesheet" href="@css?v=2013040401">
 </head>
 <body id="J_Page">
 
@@ -163,12 +160,11 @@
 <script type="text/javascript">
     var photo = "";
     if(photo == ""){
-        photo = "/u/avatar-50.png";
+        photo = "/images/user/default.jpg";
     }else{
-        photo = "/u/"+photo;
+        photo =photo;
     }
     SMEITER = {
-        staticVersion : "2013031001",
         userId:"",
         userPhoto:photo,
         nick:"",
@@ -182,10 +178,9 @@
     if(photo == ""){
         photo = "/images/user/default.jpg";
     }else{
-        photo = "http://smeite.com"+photo;
+        photo = photo;
     }
     SMEITER = {
-        staticVersion : "2013031001",
         userId:"@user.get.id",
         userPhoto:photo,
         nick:"@user.get.name",
@@ -200,7 +195,7 @@
 <!--[if lt IE 9]>
 <script src="/assets/js/html5.js" type="text/javascript"></script>
 <![endif]-->
-<script type="text/javascript" src="/assets/js/front/seajs/2.0/sea.js" data-config="/assets/js/front/app/config" id="seajsnode"></script>
+<script type="text/javascript" src="/assets/js/front/seajs/2.0/sea.js" data-config="/assets/js/front/app/config.js" id="seajsnode"></script>
 <script src="http://l.tbcdn.cn/apps/top/x/sdk.js?appkey=21136607"></script>
 @js
 
