--- a/app/views/admin/template.scala.html
+++ b/app/views/admin/template.scala.html
@@ -59,7 +59,7 @@
                     <ul>
                         <li><a href="@controllers.admin.routes.Goods.list(1)">宝贝管理</a></li>
                         <li><a href="@controllers.admin.routes.Goods.assess(1)">宝贝评价管理</a></li>
-                        <li><a href="@controllers.admin.routes.Goods.shops(1)">店铺管理</a></li>
+                      <!--  <li><a href="@controllers.admin.routes.Goods.shops(1)">店铺管理</a></li>-->
                     </ul>
                 </li>
 
