--- a/app/views/template.scala.html
+++ b/app/views/template.scala.html
@@ -63,7 +63,7 @@
                 <li class='@("on".when(nav == "forum"))'><a href="@controllers.routes.Forums.forum(1)" >讨论吧</a></li>
                 <li><span>-</span></li>
                 <li class='@("on".when(nav == "jie"))'><a href="/jie" >美食街</a></li>
-                <li class='@("on".when(nav == "miss"))'>  <a href="/miss" >特色馆</a> </li>
+                <li class='@("on".when(nav == "miss"))'>  <a href="/miss" >生活馆</a> </li>
             </ul>
 
 
