alter goods hot_index to commission

--- a/app/views/ugc/api/convertProduct.scala.html
+++ b/app/views/ugc/api/convertProduct.scala.html
@@ -37,7 +37,7 @@
     TOP.api('rest','post',{
         method:'taobao.taobaoke.widget.items.convert',
         num_iids:'@goods.numIid',
-        outer_code:'',
+        outer_code:'smeite',
         fields:'click_url,coupon_price,promotion_price,coupon_start_time'
     },function(resp){
         if(resp.error_response){
