--- a/app/views/pages/find.scala.html
+++ b/app/views/pages/find.scala.html
@@ -34,7 +34,7 @@ title =  "发现喜欢_"+ cate +"_"+tag +"_食美特，爱美食爱特色"
   <div class="goods-wall s1024" id="J_GoodsWall">
     <div class="section">
 
-        @for((((sortNum,goodsId,goodsName,goodsPic,goodsLoveNum,goodsPrice,goodsPromotionPrice,goodsIntro),comments),i)<-page.items.view.zipWithIndex) {
+        @for((((commission,goodsId,goodsName,goodsPic,goodsLoveNum,goodsPrice,goodsPromotionPrice,goodsIntro),comments),i)<-page.items.view.zipWithIndex) {
 
         <div class="goods small @if((i+1)%4==0){last} ">
             <div class="goods-pic">
@@ -51,7 +51,7 @@ title =  "发现喜欢_"+ cate +"_"+tag +"_食美特，爱美食爱特色"
             </div>
             <div class="goods-stat">
                 <span class="mr10 like-count">@goodsLoveNum</span>
-                &nbsp; &nbsp;&nbsp; @sortNum
+
                 @if(goodsPromotionPrice.isEmpty){
                 <span>￥@goodsPrice</span>
                 }else{
