--- a/app/views/ugc/api/convertProduct.scala.html
+++ b/app/views/ugc/api/convertProduct.scala.html
@@ -1,4 +1,4 @@
-@(goods:models.goods.Goods)
+@(goods:models.goods.Goods,id:Long)
 <!DOCTYPE html>
 <html>
 <head>
@@ -37,7 +37,7 @@
     TOP.api('rest','post',{
         method:'taobao.taobaoke.widget.items.convert',
         num_iids:'@goods.numIid',
-        outer_code:'smeite',
+        outer_code:'@id',
         fields:'click_url,coupon_price,promotion_price,coupon_start_time'
     },function(resp){
         if(resp.error_response){
@@ -48,7 +48,6 @@
             if (total > 0) {
                 var respItem=resp.taobaoke_items.taobaoke_item;
                 if (respItem.length > 0) {
-                 //   alert("promotion price "+respItem[0].promotion_price + " vs coupon_price "+respItem[0].coupon_price + " : "+respItem[0].coupon_start_time)
                       sellUrl = respItem[0].click_url;
                     document.getElementsByName('manual')[0].href=sellUrl;
                 }
@@ -58,7 +57,6 @@
         count();
     })
     function count() {
-//alert(sellUrl)
    window.location = sellUrl;
     }
 
