--- a/app/views/template.scala.html
+++ b/app/views/template.scala.html
@@ -58,7 +58,7 @@
                 <li  class='@("on".when(nav == "居家"))'><a href='@controllers.routes.Pages.find("居家","tag",1)'>居家</a></li>
                 <li  class='@("on".when(nav == "好玩意"))'><a href='@controllers.routes.Pages.find("好玩意","tag",1)'>好玩意</a></li>
                 <li><span>-</span></li>
-             <!--   <li  class='choice @("on".when(nav == "choice"))'><a href='@controllers.routes.Pages.choice'>天天特价</a></li>-->
+                <li  class='choice @("on".when(nav == "choice"))'><a href='@controllers.routes.Pages.choice'>天天特价</a></li>
                 <li><span>-</span></li>
                 <li class='@("on".when(nav == "forum"))'><a href="@controllers.routes.Forums.forum(1)" >讨论吧</a></li>
                 <li><span>-</span></li>
