--- a/app/views/admin/goods/list.scala.html
+++ b/app/views/admin/goods/list.scala.html
@@ -150,7 +150,8 @@
                     <th>月销售量</th>
                     <th>价格</th>
                     <th>促销价</th>
-                    <th>淘宝客佣金</th>
+                    <th>佣金比例</th>
+                    <th>返还比例</th>
                     <th>图片</th>
                     <th>会员推荐</th>
                     <th>状态</th>
@@ -167,7 +168,8 @@
                     <td>@item.volume</td>
                     <td>@item.price</td>
                     <td>@item.promotionPrice</td>
-                    <td>@item.commission</td>
+                    <td>@(item.commissionRate.getOrElse(0)*0.01)%</td>
+                    <td>@(item.rate*0.01)</td>
                     <td><a href="@controllers.routes.Goods.view(item.id.get)" target="_blank"><img src='@(item.pic+"_80x80.jpg")' width="80" height="80"></a></td>
                     <td>@if(item.isMember){<span class="label label-success">YES</span>}else{<span class="label">NO</span>} </td>
                     <td>@if(item.status==1){<span class="label label-success">上架</span>}else{<span class="label">下架</span>}</td>
@@ -263,7 +265,7 @@
             method:'taobao.taobaoke.widget.items.convert',
             num_iids:str,
             outer_code:'smeite',
-            fields:'title,num_iid,volume,price,promotion_price,commission'
+            fields:'title,num_iid,volume,price,promotion_price,commission_rate'
         },function(resp){
             if(resp.error_response){
                 alert('taobao.taobaoke.widget.items.convert接口获取商信息品失败!'+resp.error_response.msg);
@@ -272,7 +274,8 @@
                 var total=resp.total_results;
                 if (total > 0) {
                     var respItem=resp.taobaoke_items.taobaoke_item;
-                    if (respItem.length > 0) {
+               //     alert(respItem[0].commission +"   " + respItem[0].commission_rate)
+                  if (respItem.length > 0) {
                         $.ajax({
                             type:"POST",
                             url:"/admin/goods/collectGoodses",
