--- a/app/views/admin/pullGoods.scala.html
+++ b/app/views/admin/pullGoods.scala.html
@@ -62,7 +62,7 @@
                     method:'taobao.taobaoke.widget.items.convert',
                     num_iids:nums,
                     outer_code:'smeite',
-                    fields:'title,num_iid,volume,price,promotion_price,commission'
+                    fields:'title,num_iid,volume,price,promotion_price,commission_rate'
                 },function(resp){
                     if(resp.error_response){
                         alert('taobao.taobaoke.widget.items.convert接口获取商信息品失败!'+resp.error_response.msg);
