--- a/app/views/template.scala.html
+++ b/app/views/template.scala.html
@@ -102,6 +102,7 @@
                     <ul class="dropdown set-dropdown" >
                         <li><a href="@controllers.users.routes.Users.home(user.get.id.get)">我的主页</a></li>
                         <li><a href="@controllers.users.routes.UsersAccount.base">帐号设置</a></li>
+                        <li><a href=""><span class="rc">我的佣金</span></a></li>
                         <li class="last"><a href="@controllers.users.routes.UsersRegLogin.logout">退出</a></li>
                     </ul>
                 </div>
