--- a/app/views/users/commission/myShiDou.scala.html
+++ b/app/views/users/commission/myShiDou.scala.html
@@ -7,12 +7,10 @@ user
         <div class="side-nav">
             <h2>帐号设置</h2>
             <ul>
-                <li> <a  href="@controllers.users.routes.UsersAccount.base">基本信息</a> </li>
-                <!--   <li> <a class="on" href="@controllers.users.routes.UsersAccount.bind">帐号绑定</a>  </li>-->
-                <li> <a  href="@controllers.users.routes.UsersAccount.passwd">修改密码</a>  </li>
-                <!--  <li> <a  href="@controllers.users.routes.UsersAccount.invite">邀请好友</a>   </li>-->
-                <li> <a href="@controllers.users.routes.UsersAccount.award">我的奖品</a>  </li>
-                <li> <a href="@controllers.users.routes.UsersAccount.address">收货地址</a> </li>
+                <li> <a  href="@controllers.users.routes.UsersCommission.myCredits">我的集分宝</a> </li>
+                <li> <a class="on"  href="@controllers.users.routes.UsersCommission.myShiDou">我的食豆</a>  </li>
+                <li> <a  href="@controllers.users.routes.UsersCommission.myAward">我的奖品</a>  </li>
+                <li> <a  href="@controllers.users.routes.UsersCommission.invite">邀请有奖</a> </li>
             </ul>
         </div>
         <div class="main-content">
