--- a/app/views/users/account/address.scala.html
+++ b/app/views/users/account/address.scala.html
@@ -8,10 +8,8 @@ user
                      <h2>帐号设置</h2>
                      <ul>
                          <li> <a  href="@controllers.users.routes.UsersAccount.base">基本信息</a> </li>
-                      <!--   <li> <a  href="@controllers.users.routes.UsersAccount.bind">帐号绑定</a>  </li>-->
                          <li> <a  href="@controllers.users.routes.UsersAccount.passwd">修改密码</a>  </li>
-                       <!--  <li> <a  href="@controllers.users.routes.UsersAccount.invite">邀请好友</a>   </li>-->
-                         <li> <a  href="@controllers.users.routes.UsersAccount.award">我的奖品</a>  </li>
+                         <li> <a   href="@controllers.users.routes.UsersAccount.payment">设置支付宝</a>  </li>
                          <li> <a class=" on " href="@controllers.users.routes.UsersAccount.address">收货地址</a> </li>
                      </ul>
                  </div>
@@ -60,7 +58,7 @@ user
                              </div>
                              <div class="form-row">
                                  <label>&nbsp;</label>
-                                 <input type="submit" class="bbl-btn submit" value="保存"><a class="ml10 mt5 fl" href="@controllers.users.routes.UsersAccount.award">去看我的奖品</a>
+                                 <input type="submit" class="bbl-btn submit" value="保存"><a class="ml10 mt5 fl" href="@controllers.users.routes.UsersCommission.myAward">去看我的奖品</a>
                              </div>
                          </form>
                      </div>
