--- a/app/views/users/account/payment.scala.html
+++ b/app/views/users/account/payment.scala.html
@@ -8,10 +8,8 @@ user
                      <h2>帐号设置</h2>
                      <ul>
                          <li> <a  href="@controllers.users.routes.UsersAccount.base">基本信息</a> </li>
-                         <!--   <li> <a  href="@controllers.users.routes.UsersAccount.bind">帐号绑定</a>  </li>-->
                          <li> <a  href="@controllers.users.routes.UsersAccount.passwd">修改密码</a>  </li>
-                         <!--  <li> <a  href="@controllers.users.routes.UsersAccount.invite">邀请好友</a>   </li>-->
-                         <li> <a class=" on "   href="@controllers.users.routes.UsersAccount.award">我的奖品</a>  </li>
+                         <li> <a class="on"  href="@controllers.users.routes.UsersAccount.payment">设置支付宝</a>  </li>
                          <li> <a href="@controllers.users.routes.UsersAccount.address">收货地址</a> </li>
                      </ul>
                  </div>
