--- a/app/views/forums/empty.scala.html
+++ b/app/views/forums/empty.scala.html
@@ -1,6 +1,6 @@
 
 @views.html.template(
-title = "食美特，爱美食爱特色——你查看的帖子不存在"
+title = "食美特，爱美食爱生活——你查看的帖子不存在"
 )(css="/assets/css/template/forum.css") {
 <div class="container" id="forum">
 
