--- a/app/views/goods/view.scala.html
+++ b/app/views/goods/view.scala.html
@@ -1,7 +1,7 @@
 @(user:Option[models.user.User],goods:models.goods.Goods,firstShareUser:models.user.User,tags:List[models.tag.TagGoods])
 @views.html.template(
 user,
-title =goods.name+"_食美特，爱美食爱特色",
+title =goods.name+"_食美特，爱美食爱生活",
 description = goods.intro
 
 )(css="/assets/css/template/goods.detail.css") {
