--- a/app/views/pages/choice.scala.html
+++ b/app/views/pages/choice.scala.html
@@ -2,7 +2,7 @@
 @views.html.template(
 user,
 nav="index",
-title = "小编精挑细选、严格控制品质的宝贝_食美特，爱美食爱特色"
+title = "小编精挑细选、严格控制品质的宝贝_食美特，爱美食爱生活"
 )(css="/assets/css/template/choice.css") {
 
 <div class="container" class="clearfix">
