--- a/app/views/pages/find.scala.html
+++ b/app/views/pages/find.scala.html
@@ -2,7 +2,7 @@
 @views.html.template(
 user,
 nav=cate,
-title =  "发现喜欢_"+ cate +"_"+tag +"_食美特，爱美食爱特色"
+title =  "发现喜欢_"+ cate +"_"+tag +"_食美特，爱美食爱生活"
 )(css="/assets/css/template/find.css") {
 <div class="container" id="find">
     <div class="tag-list clearfix" id="J_tags">
