--- a/app/views/search/baobei.scala.html
+++ b/app/views/search/baobei.scala.html
@@ -2,7 +2,7 @@
 @views.html.template(
 user,
 nav="find",
-title = "宝贝搜索结果_食美特，爱美食爱特色"
+title = "宝贝搜索结果_食美特，爱美食爱生活"
 )(css="/assets/css/template/faxian.css") {
 <div class="container" id="index">
     <div class="tag-book s1024">
