--- a/app/views/themes/edit.scala.html
+++ b/app/views/themes/edit.scala.html
@@ -1,7 +1,7 @@
 @(user:Option[models.user.User],form:Form[(Option[Long],String,Option[String],Option[Int],Option[String])])
 @views.html.template(
 user,
-title = "创建主题 _ 食美特，爱美食爱特色"
+title = "创建主题 _ 食美特，爱美食爱生活"
 
 )(css="/assets/css/template/user.css") {
 <div class="container clearfix" id="home">
