--- a/app/views/forums/edit.scala.html
+++ b/app/views/forums/edit.scala.html
@@ -1,7 +1,7 @@
 @(user:Option[models.user.User],form:Form[(Option[Long],String,Int,Int,String)])
 @views.html.template(
 user,
-title = "发布主题_讨论吧_广场_食美特，爱美食爱特色"
+title = "发布主题_讨论吧_广场_食美特，爱美食爱生活"
 )(css="/assets/css/template/forum.css") {
 <div class="container clearfix">
 
