--- a/app/views/forums/forum.scala.html
+++ b/app/views/forums/forum.scala.html
@@ -2,7 +2,7 @@
 @views.html.template(
 user,
 nav="forum",
-title = "讨论吧_广场_食美特，爱美食爱特色"
+title = "讨论吧_广场_食美特，爱美食爱生活"
 )(css="/assets/css/template/forum.css") {
 <div class="container discuss clearfix">
 <!-- 讨论吧 -->
