--- a/app/views/infos/aboutUs.scala.html
+++ b/app/views/infos/aboutUs.scala.html
@@ -1,14 +1,14 @@
 @(user:Option[models.user.User])
 @views.html.template(
 user,
-title =  "关于我们_食美特，爱美食爱特色"
+title =  "关于我们_食美特，爱美食爱生活"
 )(css="/assets/css/template/user.regLogin.css") {
 
 <div class="container">
     <div class="common">
         <h2>关于“食美特”</h2>
         <div>
-            <p>食美特，爱美食爱特色 </p>
+            <p>食美特，爱美食爱生活 </p>
 
             <p>Smeite.com致力于发现绿色安全、健康美味的食品，推荐美观实用、简约实惠的家居用品以及充满创意的好玩意。
                 我们严格把控商品的品质，用心创造一个值得信赖的购物分享社区。
