--- a/app/views/infos/contactUs.scala.html
+++ b/app/views/infos/contactUs.scala.html
@@ -1,7 +1,7 @@
 @(user:Option[models.user.User])
 @views.html.template(
 user,
-title = "联系我们_食美特，爱美食爱特色"
+title = "联系我们_食美特，爱美食爱生活"
 )(css="/assets/css/template/user.regLogin.css") {
 
 <div class="container">
