--- a/app/views/infos/siteMap.scala.html
+++ b/app/views/infos/siteMap.scala.html
@@ -1,7 +1,7 @@
 @(user:Option[models.user.User],tags:Page[models.tag.Tag])
 @views.html.template(
 user,
-title = "网站地图_食美特，爱美食爱特色"
+title = "网站地图_食美特，爱美食爱生活"
 )(css="/assets/css/template/sitemap.css") {
 
 <div class="container">
