--- a/app/views/pages/jie.scala.html
+++ b/app/views/pages/jie.scala.html
@@ -2,7 +2,7 @@
 @views.html.template(
 user,
 nav="jie",
-title = " 美食街_食美特，爱美食爱特色"
+title = " 美食街_食美特，爱美食爱生活"
 )(css="/assets/css/template/themes.css") {
 
 <div class="container clearfix" id="themes">
