--- a/app/views/themes/likes.scala.html
+++ b/app/views/themes/likes.scala.html
@@ -1,7 +1,7 @@
 @(user:Option[models.user.User],author:models.user.User,theme:models.theme.Theme,style:models.theme.ThemeStyle,page:Page[models.user.User])
 @views.html.template(
 user,
-title = theme.name+" _ 主题达人 _ 食美特，爱美食爱特色",
+title = theme.name+" _ 主题达人 _ 食美特，爱美食爱生活",
 keywords =  theme.tags.get,
 description =theme.intro.get
 )(css="/assets/css/template/theme.detail.css") {
