--- a/app/views/users/appraisal.scala.html
+++ b/app/views/users/appraisal.scala.html
@@ -1,7 +1,7 @@
 @(user:Option[models.user.User],author:models.user.User,page:models.Page[models.goods.Goods],userLoveGoods:models.Page[models.goods.Goods])
 @views.html.template(
 user,
-title =  author.name+" 在食美特的个人主页，食美特，爱美食爱特色"
+title =  author.name+" 在食美特的个人主页，食美特，爱美食爱生活"
 )(css="/assets/css/template/user.css") {
 <div class="container clearfix">
 <div class="u-nav box-shadow">
