--- a/app/views/users/regLogin/doVerifyEmail.scala.html
+++ b/app/views/users/regLogin/doVerifyEmail.scala.html
@@ -1,7 +1,7 @@
 @(user:Option[models.user.User],email:String,gotoEmail:String)
 @views.html.template(
 user,
-title =  "食美特，爱美食爱特色——用户注册"
+title =  "食美特，爱美食爱生活——用户注册"
 )(css="/assets/css/template/user.regLogin.css") {
 
     <div class="container" id="regLogin">
