--- a/app/views/users/regLogin/regist.scala.html
+++ b/app/views/users/regLogin/regist.scala.html
@@ -1,6 +1,6 @@
 @(form: Form[(String,String)])
 @views.html.template(
-title =  "食美特，爱美食爱特色——用户注册"
+title =  "食美特，爱美食爱生活——用户注册"
 )(css="/assets/css/template/user.regLogin.css") {
 
     <div class="container" id="regLogin">
