--- a/app/views/users/regLogin/resetPasswd.scala.html
+++ b/app/views/users/regLogin/resetPasswd.scala.html
@@ -1,7 +1,7 @@
 @(user:Option[models.user.User])
 @views.html.template(
 user,
-title =  "食美特，爱美食爱特色——找回密码"
+title =  "食美特，爱美食爱生活——找回密码"
 )(css="/assets/css/template/user.regLogin.css") {
 
     <div class="container" id="regLogin">
