--- a/app/views/users/theme.scala.html
+++ b/app/views/users/theme.scala.html
@@ -1,7 +1,7 @@
 @(user:Option[models.user.User],author:models.user.User,page:Page[((Long, String, String,Int),List[Option[String]])],t:String)
 @views.html.template(
 user,
-title =  author.name+" 在食美特的个人主页，食美特，爱美食爱特色"
+title =  author.name+" 在食美特的个人主页，食美特，爱美食爱生活"
 )(css="/assets/css/template/user.css") {
         <div class="container clearfix" id="home">
             <div class="u-nav box-shadow">
