adjust header search

--- a/app/views/template.scala.html
+++ b/app/views/template.scala.html
@@ -16,25 +16,26 @@
 
 
 <div id="page">
-
+    <div id="top">
     <div id="header" class="header">
         <div class="container clearfix">
-            <div class="hd-left">
+
            <a href="/" class="logo">
            <span class="logo-img"> <img src="/assets/ui/logo.png" /></span>
             <span class="logo-intro">&nbsp;•&nbsp;爱美食爱生活</span>
            </a>
 
-            </div>
-            <div class="hd-right">
+
+
 
                 <div class="search" id="search">
-                    <form action="/search" method="get">
-                        <input class="search-input-keyword" type="text" autocomplete="off" data-placeholder="请输入您想要搜索的淘宝商品网址或者关键词" name="keyword">
+                    <form action="/search" method="get" class="search-form">
+                        <input class="search-input-keyword" type="text" autocomplete="off" placeholder="请输入您想要搜索的淘宝商品网址或者关键词" name="keyword">
                         <button class="header-search-button" type="submit">搜索</button>
                     </form>
+					<a class="search-intro">返利搜索教程</a>
                 </div>
-            </div>
+
         </div>
 
 
@@ -109,6 +110,7 @@
             </div>
     </div>
     <!-- nav end --->
+    </div>
     <div id="content">
         @content
 
