fix some js bugs

--- a/app/views/template.scala.html
+++ b/app/views/template.scala.html
@@ -19,23 +19,29 @@
     <div id="top">
     <div id="header" class="header">
         <div class="container clearfix">
+            <div class="hd-left">
+                <a href="/" class="logo">
+                    <span class="logo-img"> <img src="/assets/ui/logo.png"></span>
+                    <span class="logo-intro">&nbsp;•&nbsp;爱美食爱生活</span>
+                </a>
 
-           <a href="/" class="logo">
-           <span class="logo-img"> <img src="/assets/ui/logo.png" /></span>
-            <span class="logo-intro">&nbsp;•&nbsp;爱美食爱生活</span>
-           </a>
+            </div>
+            <div class="hd-right">
+                <div class="gm-third-login">
+                    <a href="#" data-type="third" class="third-login" target="_blank">返利&nbsp;•&nbsp;搜索&nbsp;•&nbsp;教程</a>
 
-
-
-
+                </div>
                 <div class="search" id="search">
-                    <form action="/search" method="get" class="search-form">
-                        <input class="search-input-keyword" type="text" autocomplete="off" placeholder="请输入您想要搜索的淘宝商品网址或者关键词" name="keyword">
+                    <form action="/search" method="get">
+                        <input class="search-input-keyword" type="text" autocomplete="off" value="请输入您想要搜索的淘宝商品网址或者关键词" name="keyword">
                         <button class="header-search-button" type="submit">搜索</button>
                     </form>
-					<a class="search-intro">返利搜索教程</a>
+
                 </div>
 
+
+
+            </div>
         </div>
 
 
