--- a/app/views/search/baobei.scala.html
+++ b/app/views/search/baobei.scala.html
@@ -3,7 +3,7 @@
 user,
 nav="find",
 title = "宝贝搜索结果_食美特，爱美食爱生活"
-)(css="/assets/css/template/faxian.css") {
+)(css="/assets/css/template/find.css") {
 <div class="container" id="index">
     <div class="tag-book s1024">
         @if(page.items.isEmpty){
@@ -16,75 +16,66 @@ title = "宝贝搜索结果_食美特，爱美食爱生活"
 
 
         </div>
-      <div class="goods-wall s1024" id="J_GoodsWall">
-
-
-
+        <div class="goods-wall s1024" id="J_GoodsWall">
             <div class="section">
 
+                @for((((commissionRate,goodsId,goodsName,goodsPic,goodsLoveNum,goodsPrice,goodsPromotionPrice,goodsIntro),comments),i)<-page.items.view.zipWithIndex) {
 
-
-                @for((((sortNum,goodsId,goodsName,goodsPic,goodsLoveNum,goodsPrice,goodsPromotionPrice,goodsIntro),comments),i)<-page.items.view.zipWithIndex) {
-
-                    <div class="goods" style="margin-left: 5px">
+                <div class="goods small @if((i+1)%4==0){last} ">
                     <div class="goods-pic">
-                    <a class="pic-link" href="@controllers.routes.Goods.view(goodsId)" title="@goodsName" target="_blank">
-                    <img src='@(goodsPic+"_210x210.jpg")' width="210" height="210" title="@goodsName" alt="@goodsName" />
-                            </a>
-                    <a  class="ilike-m" href="javascript:;" data-proimgsrc="@goodsPic" data-prourl="@controllers.routes.Goods.view(goodsId)" data-proname="@goodsName" data-type="0" data-proid="@goodsId">
-                    <i></i>
-                    <span class="ilikeCount" data-val="@goodsLoveNum">喜欢(@goodsLoveNum)</span>
-                    </a>
+                        <a class="pic-link" href="@controllers.routes.Goods.view(goodsId)" title="@goodsName" target="_blank">
+                            <img src="/assets/ui/blank.gif"  data-original='@(goodsPic+"_210x210.jpg")' width="210" height="210" title="@goodsName" alt="@goodsName" />
+                        </a>
+                        <a  class="ilike-m" href="javascript:;" data-proimgsrc="@goodsPic" data-prourl="@controllers.routes.Goods.view(goodsId)" data-proname="@goodsName" data-type="0" data-proid="@goodsId">
+                            <i></i>
+                            <span class="ilikeCount" data-val="@goodsLoveNum">喜欢(@goodsLoveNum)</span>
+                        </a>
                     </div>
                     <div class="goods-title ofh">
-                    @goodsName
+                        @goodsName
                     </div>
                     <div class="goods-stat">
-                    <span class="mr10 like-count">@goodsLoveNum</span>
+                        <span class="mr10 like-count">@goodsLoveNum</span>
 
                         @if(goodsPromotionPrice.isEmpty){
                         <span>￥@goodsPrice</span>
                         }else{
                         @if(goodsPrice!=goodsPromotionPrice.get){
-                        <span style="text-decoration: line-through">@goodsPrice</span> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                        <span style="text-decoration: line-through">￥@goodsPrice</span> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                         <span>￥@goodsPromotionPrice</span>
                         }else{  <span>￥@goodsPrice</span> }
                         }
-
-                            </div>
+                    </div>
                     <p class="goods-des">
-                    @goodsIntro
+                        @goodsIntro
                     </p>
                     <div class="comment">
 
-                    @for(((uid,uname,upic,content),i)<-comments.view.zipWithIndex) {
+                        @for(((uid,uname,upic,content),i)<-comments.view.zipWithIndex) {
                         @if(!uid.isEmpty){
+
                         <div class="comment-item @if(i>0) {comment-item-more }">
                             <div class="user-pic">
-                                <a class="a-img"  href="@controllers.users.routes.Users.home(uid.get)" title="@uname.get" target="_blank">
-                                <img src="@upic.get" width="30" height="30" alt="@uname.get"/>
+                                <a class="a-img"  href="@controllers.users.routes.Users.home(uid.getOrElse(1))" title="@uname" target="_blank">
+                                    <img src="@upic" width="30" height="30" alt="@uname"/>
                                 </a>
                             </div>
                             <div class="content">
-                                <a class="user-name"  href="@controllers.users.routes.Users.home(uid.get)" title="@uname.get" target="_blank">@uname.get</a>
-                                <span>@content.get</span>
+                                <a class="user-name"  href="@controllers.users.routes.Users.home(uid.getOrElse(0))" title="@uname" target="_blank">@uname</a>
+                                <span>@content</span>
                             </div>
                         </div>
-                    }
+                        }
                         }
                     </div>
-                    </div>
+                </div>
 
-
-            }
-
+                }
             </div>
 
+        </div>
 
-
-    <!--first 18 goods end-->
-</div>
-    <!--宝贝展示 end-->
+        <!--宝贝展示 end-->
     <div class="pt30 pb20 clearfix">
         <div class="pagin4faxian tac">
             <ul>
@@ -112,7 +103,7 @@ title = "宝贝搜索结果_食美特，爱美食爱生活"
 }{
 <script type="text/javascript">
     seajs.use('app/init', function (init) {
-        init.load('app/goods.find,app/goods.favor');
+        init.load('app/goods/goods.find,app/goods/goods.favor');
     });
 </script>
 }
