--- a/app/views/users/snsLogin/asynLogin.scala.html
+++ b/app/views/users/snsLogin/asynLogin.scala.html
@@ -5,18 +5,16 @@
     <title></title>
     @if(snsType == "qzone"){
     <script>
-   //     if(window.opener){
-    //        window.opener.followSmeite(100,"","qzone" ,"false",true);
-    //    }
-   window.location.reload();
+        if(window.opener){
+            window.opener.followSmeite(100,"","qzone" ,"false",true);
+      }
         window.close();
     </script>
     }else {
     <script>
-      /*  if(window.opener){
+        if(window.opener){
             window.opener.followSmeite(100,"","sina" ,"false",true);
-        }*/
-      window.location.reload();
+        }
         window.close();
     </script>
 
